update color and icon logs

--- a/resources/views/pages/home2.edge
+++ b/resources/views/pages/home2.edge
@@ -1,84 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdonisJS - A fully featured web framework for Node.js</title>
+@layout('layouts/main')
+@set('title', 'POS')
 
-  <!-- Include Tailwind CSS -->
-  @vite(['resources/css/app.css', 'resources/js/home.js'])
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-</head>
-<body class="bg-gray-100">
-
-  <div class="w-full">
-    <nav class="bg-primary">
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-          <!-- Mobile menu button -->
-          <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-            <button id="mobile-menu-button" type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-              <span class="sr-only">Open main menu</span>
-              <!-- Icon when menu is closed -->
-              <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-              </svg>
-              <!-- Icon when menu is open -->
-              <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-          </div>
-
-          <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-            <div class="flex flex-shrink-0 items-center">
-              <img class="h-10 w-auto" src="/images/logo.webp" alt="Eraspace">
-            </div>
-            <div class="hidden sm:ml-6 sm:block">
-              <div class="flex space-x-4">
-                <!-- Navigation Links -->
-                <a href="#" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">POS</a>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">E-Commerce</a>
-                <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dealer Portal</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-            <!-- Profile Dropdown -->
-            <div class="relative ml-3">
-              <div>
-                <button type="button" id="user-menu-button" class="relative flex rounded-full bg-navbar text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-                  <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="User Image">
-                </button>
-              </div>
-
-              <!-- Dropdown menu, hidden by default -->
-              <div id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Mobile menu, hidden by default -->
-      <div id="mobile-menu" class="sm:hidden hidden space-y-1 px-2 pb-3 pt-2">
-        <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Dashboard</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Team</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Calendar</a>
-      </div>
-    </nav>
-  </div>
-
-  <div class="container mx-auto px-4 py-4">
-    <div class="flex my-5 justify-between items-center">
+@section('body')
+  <section class="container mx-auto px-4 py-4">
+    <div class="my-5">
       <span id="date_time_now" class="text-primary text-md"></span>
     </div>
-    
     <div class="flex flex-wrap">
       <!-- Card 1 -->
       <div class="w-full md:w-1/3 mb-5">
@@ -91,8 +18,8 @@
             <div class="p-6">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                    <div>
-                      <i class="fa fa-arrow-down fa-2x text-success" id="div_oaa_queryimei_icon" aria-hidden="true"></i>
+                    <div id="div_oaa_queryimei_icon">
+                      <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                     </div>
                 </div>
                 <div class="flex-1">
@@ -114,8 +41,8 @@
               <hr class="my-4">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_oaa_checkstock_icon" aria-hidden="true"></i>
+                  <div id="div_oaa_checkstock_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="flex-1">
@@ -150,8 +77,8 @@
             <div class="p-6">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_opp_item_icon" aria-hidden="true"></i>
+                  <div id="div_opp_item_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="flex-1">
@@ -173,8 +100,8 @@
               <hr class="my-4">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_opp_checkout_icon" aria-hidden="true"></i>
+                  <div id="div_opp_checkout_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="flex-1">
@@ -209,8 +136,8 @@
             <div class="p-6">
               <div class="flex items-center">
                 <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_kafka_icon" aria-hidden="true"></i>
+                  <div id="div_kafka_icon">
+                    <i class="fa fa-arrow-down fa-2x text-success" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="flex-1">
@@ -235,9 +162,5 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <script src="includes/home.js"></script>
-
-</body>
-</html>
+  </section>
+@end
