--- a/resources/views/pages/e-commerce.edge
+++ b/resources/views/pages/e-commerce.edge
@@ -12,9 +12,9 @@
     
     <div class="flex flex-wrap">
       <!-- Card 1 -->
-      <div class="w-full md:w-1/3 mb-5">
+      <div class="w-full md:w-1/2 mb-5">
         <div>
-          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+          <div class="max-w-lg bg-white shadow-lg rounded-lg overflow-hidden">
             <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
               OAA
             </div>
@@ -23,15 +23,15 @@
               <div class="flex items-center">
                 <div class="flex mr-2">
                     <div>
-                      <i class="fa fa-arrow-down fa-2x text-success" id="div_oaa_queryimei_icon" aria-hidden="true"></i>
+                      <i class="fa fa-arrow-down fa-2x text-success" id="div_oaa_stockquery_icon" aria-hidden="true"></i>
                     </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_queryimei">
+                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_stockquery">
                         0s
                     </p>
                     <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                      Query Imei
+                      Stock Query
                     </p>
                 </div>
                 <div class="inline-flex items-center text-success font-semibold">
@@ -43,37 +43,15 @@
                 </div>
               </div>
               <hr class="my-4">
-              <div class="flex items-center">
-                <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_oaa_checkstock_icon" aria-hidden="true"></i>
-                  </div>
-                </div>
-                <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_checkstock">
-                        0s
-                    </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                      Check Stock
-                    </p>
-                </div>
-                <div class="inline-flex items-center text-success font-semibold">
-                  <button
-                    type="button"
-                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
-                    <i class="fa fa-list" aria-hidden="true"></i> Detail
-                  </button>
-                </div>
-              </div>
             </div>
           </div>
         </div>
       </div>
       
       <!-- Card 2 -->
-      <div class="w-full md:w-1/3 mb-5">
+      <div class="w-full md:w-1/2 mb-5">
         <div>
-          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
+          <div class="max-w-lg bg-white shadow-lg rounded-lg overflow-hidden">
             <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
               OPP
             </div>
@@ -129,42 +107,6 @@
         </div>
       </div>
       
-      <!-- Card 3 -->
-      <div class="w-full md:w-1/3 mb-5">
-        <div>
-          <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
-              Kafka
-            </div>
-            <!-- Card Body -->
-            <div class="p-6">
-              <div class="flex items-center">
-                <div class="flex mr-2">
-                  <div>
-                    <i class="fa fa-arrow-down fa-2x text-success" id="div_kafka_icon" aria-hidden="true"></i>
-                  </div>
-                </div>
-                <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_kafka">
-                        0s
-                    </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                      Kafka
-                    </p>
-                </div>
-                <div class="inline-flex items-center text-success font-semibold">
-                  <button
-                    type="button"
-                    class="inline-block rounded bg-primary px-4 pb-[5px] pt-[6px] text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 motion-reduce:transition-none dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong">
-                    <i class="fa fa-list" aria-hidden="true"></i> Detail
-                  </button>
-                </div>
-              </div>
-              <hr class="my-4">
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
