--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,9 +1,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdonisJS - A fully featured web framework for Node.js</title>
+    <title>Spacelog - {{ title }}</title>
   
     <!-- Include Tailwind CSS -->
-    @vite(['resources/css/app.css', 'resources/js/home.js'])
+    @if (title === 'Home')
+        @vite(['resources/css/app.css', 'resources/js/home.js'])
+    @elseif (title === 'e-Commerce')
+        @vite(['resources/css/app.css', 'resources/js/e-commerce.js'])
+    @endif
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
