--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -32,8 +32,8 @@
                   class="rounded-md {{ title === 'e-Commerce' ? 'bg-gray-900 text-white' : 'text-gray-300' }} px-3 py-2 text-sm font-medium hover:bg-gray-700 hover:text-white">E-Commerce
                 </a>
 
-                <a href="#"
-                  class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dealer Portal
+                <a href="{{ route('dealer-portal') }}"
+                  class="rounded-md {{ title === 'Dealer Portal' ? 'bg-gray-900 text-white' : 'text-gray-300' }} px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dealer Portal
                 </a>
               </div>
             </div>
