--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -8,6 +8,8 @@
         @vite(['resources/css/app.css', 'resources/js/home.js'])
     @elseif (title === 'e-Commerce')
         @vite(['resources/css/app.css', 'resources/js/e-commerce.js'])
+    @elseif (title === 'Dealer Portal')
+        @vite(['resources/css/app.css', 'resources/js/dealer-portal.js'])
     @endif
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
