--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -61,10 +61,9 @@
 
       <!-- Mobile menu, hidden by default -->
       <div id="mobile-menu" class="sm:hidden hidden space-y-1 px-2 pb-3 pt-2">
-        <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Dashboard</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Team</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Calendar</a>
+        <a href="{{ route('home') }}" class="block rounded-md {{ title === 'Home' ? 'bg-gray-900 text-white' : 'text-gray-300' }} px-3 py-2 text-base font-medium text-white" aria-current="page">POS</a>
+        <a href="{{ route('e-commerce') }}" class="block rounded-md {{ title === 'e-Commerce' ? 'bg-gray-900 text-white' : 'text-gray-300' }} px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">E-Commerce</a>
+        <a href="{{ route('dealer-portal') }}" class="block rounded-md {{ title === 'Dealer Portal' ? 'bg-gray-900 text-white' : 'text-gray-300' }} px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dealer Portal</a>
       </div>
     </nav>
  </section>
