--- a/resources/views/pages/dealer-portal.edge
+++ b/resources/views/pages/dealer-portal.edge
@@ -15,8 +15,11 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
               OAA
+              <p class="text-xs text-white-500 truncate dark:text-white-400">
+                Normal under 1s
+              </p>
             </div>
             <!-- Card Body -->
             <div class="p-6">
@@ -52,8 +55,11 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
               OPP
+              <p class="text-xs text-white-500 truncate dark:text-white-400">
+                Normal under 2s
+              </p>
             </div>
             <!-- Card Body -->
             <div class="p-6">
@@ -89,8 +95,11 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-blue-500 text-white text-lg font-semibold px-6 py-4">
+            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
               Outstanding AR
+              <p class="text-xs text-white-500 truncate dark:text-white-400">
+                Normal under 1s
+              </p>
             </div>
             <!-- Card Body -->
             <div class="p-6">
