--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -15,9 +15,9 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
+            <div class="header-card bg-primary text-white text-lg font-semibold px-6 py-4">
               OAA
-              <p class="text-xs text-white-500 truncate dark:text-white-400">
+              <p class="sub-header-card text-xs text-white-500 truncate dark:text-white-400">
                 Normal under 1s
               </p>
             </div>
@@ -30,10 +30,10 @@
                     </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_queryimei">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_oaa_queryimei">
                         0s
                     </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                    <p class="text-xs text-gray-500 truncate dark:text-gray-400">
                       Query Imei
                     </p>
                 </div>
@@ -53,10 +53,10 @@
                   </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_oaa_checkstock">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_oaa_checkstock">
                         0s
                     </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                    <p class="text-xs text-gray-500 truncate dark:text-gray-400">
                       Check Stock
                     </p>
                 </div>
@@ -77,9 +77,9 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
+            <div class="header-card bg-primary text-white text-lg font-semibold px-6 py-4">
               OPP
-              <p class="text-xs text-white-500 truncate dark:text-white-400">
+              <p class="sub-header-card text-xs text-white-500 truncate dark:text-white-400">
                 Normal under 2s
               </p>
             </div>
@@ -92,10 +92,10 @@
                   </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_opp_item">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_opp_item">
                         0s
                     </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                    <p class="text-xs text-gray-500 truncate dark:text-gray-400">
                       OPP Item
                     </p>
                 </div>
@@ -115,10 +115,10 @@
                   </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_opp_checkout">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_opp_checkout">
                         0s
                     </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                    <p class="text-xs text-gray-500 truncate dark:text-gray-400">
                       OPP Checkout
                     </p>
                 </div>
@@ -139,9 +139,9 @@
       <div class="w-full md:w-1/3 mb-5">
         <div>
           <div class="max-w-sm bg-white shadow-lg rounded-lg overflow-hidden">
-            <div class="bg-primary text-white text-lg font-semibold px-6 py-4">
+            <div class="header-card bg-primary text-white text-lg font-semibold px-6 py-4">
               Kafka
-              <p class="text-xs text-white-500 truncate dark:text-white-400">
+              <p class="sub-header-card text-xs text-white-500 truncate dark:text-white-400">
                 Normal under 1s
               </p>
             </div>
@@ -154,10 +154,10 @@
                   </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-2xl inline-flex items-center text-success font-semibold" id="div_kafka">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_kafka">
                         0s
                     </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                    <p class="text-xs text-gray-500 truncate dark:text-gray-400">
                       Kafka
                     </p>
                 </div>
