--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -19,7 +19,7 @@
 
           <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
             <div class="flex flex-shrink-0 items-center">
-              <img class="h-10 w-auto" src="/images/logo.webp" alt="Eraspace">
+              <p class="logo text-2xl">Spacelog</p>
             </div>
             <div class="hidden sm:ml-6 sm:block">
               <div class="flex space-x-4">
