--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -183,19 +183,21 @@
   </div>
 
   <div id="myModal" class="fixed inset-0 z-50 hidden bg-gray-900 bg-opacity-50 flex items-center justify-center">
-    <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/3">
-      <div class="flex justify-between items-center mb-4">
-        <h2 class="text-xl font-semibold">Modal Title</h2>
-        <button class="text-gray-500 hover:text-gray-700" id="closeModal">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-          </svg>
-        </button>
-      </div>
-      <div id="modalContent"></div>
+    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-4xl h-3xl max-h-screen overflow-auto">
+        <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl font-semibold">Modal Title</h2>
+            <button class="text-gray-500 hover:text-gray-700" id="closeModal">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </button>
+        </div>
+        <div id="modalContent" class="h-full"></div>
     </div>
   </div>
-  
 
+
+  
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
