--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,13 +45,10 @@ body {
 .sub-header-card {
   font-family: 'Roboto', sans-serif;
 }
-.loader {
-  display: none;
-  position: fixed;
-  z-index: 50;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3em;
-  color: #000;
+.disable-clicks {
+  pointer-events: none;
+}
+
+#myModal {
+  pointer-events: auto;
 }
