--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -117,7 +117,7 @@
                   </div>
                 </div>
                 <div class="flex-1">
-                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_opp_checkout">
+                    <p class="text-xl inline-flex items-center text-success font-semibold" id="div_checkout_item">
                         0s
                     </p>
                     <p class="text-xs text-gray-500 truncate dark:text-gray-400">
