--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,6 +38,9 @@ body {
   color: white;
 }
 
+.logo-login {
+  font-family: 'Viga', sans-serif;
+}
 .header-card {
   font-family: 'Viga', sans-serif;
 }
