--- a/resources/views/partials/menu.edge
+++ b/resources/views/partials/menu.edge
@@ -42,7 +42,8 @@
           <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
             <!-- Profile Dropdown -->
             <div class="relative ml-3">
-              <div>
+              <a href="/login" class="text-white text-white hover:text-gray-300">Login&nbsp;<i class="fa fa-sign-in"></i></a>
+              {{--  <div>
                 <button type="button" id="user-menu-button" class="relative flex rounded-full bg-navbar text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
                   <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="User Image">
                 </button>
@@ -53,7 +54,7 @@
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-              </div>
+              </div>  --}}
             </div>
           </div>
         </div>
