--- a/resources/views/pages/auth/login.edge
+++ b/resources/views/pages/auth/login.edge
@@ -4,22 +4,29 @@
 <body>
     <div class="flex h-screen bg-primary">
         <div class="w-full max-w-xs m-auto bg-indigo-100 rounded p-5">   
-        <header>
-            <p class="logo-login text-primary w-[8rem] mx-auto mb-5 text-3xl">Spacelog</p>
-        </header>   
-        <form>
-            <div>
-            <label class="block mb-2 text-indigo-500" for="username">Email</label>
-            <input class="w-full p-2 mb-6 text-primary border-b-2 border-indigo-500 outline-none focus:bg-gray-300" type="text" name="email" required>
-            </div>
-            <div>
-            <label class="block mb-2 text-indigo-500" for="password">Password</label>
-            <input class="w-full p-2 mb-6 text-primary border-b-2 border-indigo-500 outline-none focus:bg-gray-300" type="password" name="password" required>
-            </div>
-            <div>          
-            <input class="w-full cursor-pointer bg-indigo-700 hover:bg-pink-700 text-white font-bold py-2 px-4 mb-6 rounded" type="submit">
-            </div>       
-        </form>   
+            <header>
+                <p class="logo-login text-primary w-[8rem] mx-auto mb-5 text-3xl">Spacelog</p>
+            </header>   
+            <form id="login-form" action="{{ route('login.post') }}" method="POST">
+                {{ csrfField() }}
+                @flashMessage('notification')
+                <div class="notification {{ $message.type }}">
+                    {{ $message.message }}
+                </div>
+                @end
+                <div>
+                  <label class="block mb-2 text-indigo-500" for="email">Email</label>
+                  <input class="w-full p-2 mb-6 text-primary border-b-2 border-indigo-500 outline-none focus:bg-gray-300" type="text" name="email" required>
+                </div>
+                <div>
+                  <label class="block mb-2 text-indigo-500" for="password">Password</label>
+                  <input class="w-full p-2 mb-6 text-primary border-b-2 border-indigo-500 outline-none focus:bg-gray-300" type="password" name="password" required>
+                </div>
+                <div>          
+                  <button class="w-full cursor-pointer bg-primary hover:bg-indigo-700 text-white font-bold py-2 px-4 mb-6 rounded" type="submit">Login</button>
+                  <a href="/" class="text-primary hover:text-gray-500 text-md" type="submit"><i class="fa fa-arrow-left"></i> Back</a>
+                </div>       
+            </form>                  
         </div>
     </div>
 </body>
