--- a/resources/views/partials/header-cms.edge
+++ b/resources/views/partials/header-cms.edge
@@ -4,6 +4,6 @@
     <title>Spacelog - {{ title }}</title>
   
     <!-- Include Tailwind CSS -->
-    @vite(['resources/css/app.css', 'resources/js/app.js'])
+    @vite(['resources/css/app.css', 'resources/js/app.js', 'resources/js/login.js'])
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
