code base dashboard

--- a/resources/views/pages/auth/login.edge
+++ b/resources/views/pages/auth/login.edge
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-@include('partials/header-cms')
+@include('partials/header-login')
 <body>
     <div class="flex h-screen bg-primary">
         <div class="w-full max-w-xs m-auto bg-indigo-100 rounded p-5">   
