--- a/resources/views/partials/header-cms.edge
+++ b/resources/views/partials/header-cms.edge
@@ -1,9 +1,9 @@
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spacelog - {{ title }}</title>
-  
-    <!-- Include Tailwind CSS -->
-    @vite(['resources/css/app.css', 'resources/js/app.js', 'resources/js/login.js'])
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <title>Spacelog - {{ title }}</title> 
+    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">  
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
+    @vite(['resources/css/style.css', 'resources/js/scripts.js'])
 </head>
