--- a/resources/views/pages/dashboard/index.edge
+++ b/resources/views/pages/dashboard/index.edge
@@ -15,11 +15,10 @@
                         </div>
                         <div class="py-2 ml-10">
                             <h1 class="h6">Welcome, Agus Siswanto!</h1>
-                            <p class="text-white text-xs">You've finished all of your tasks for this week.</p>
+                            <p class="text-white text-xs">We are finished dashboard for your tasks.</p>
                             <ul class="mt-4">
-                                <li class="text-sm font-light"><i class="fad fa-check-double mr-2 mb-2"></i> Finish Dashboard Design</li>
-                                <li class="text-sm font-light"><i class="fad fa-check-double mr-2 mb-2"></i> Fix Issue #74</li>
-                                <li class="text-sm font-light"><i class="fad fa-check-double mr-2"></i> Publish version 1.0.6</li>
+                                <li class="text-sm font-light"><i class="fad fa-check-double mr-2 mb-2"></i> Finish Dashboard</li>
+                                <li class="text-sm font-light"><i class="fad fa-check-double mr-2"></i> Publish version 1.0.0</li>
                             </ul>
                         </div>
                     </div>
