--- a/resources/views/partials/header-cms.edge
+++ b/resources/views/partials/header-cms.edge
@@ -5,5 +5,5 @@
     <title>Spacelog - {{ title }}</title> 
     <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">  
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
-    @vite(['resources/css/style.css', 'resources/js/scripts.js'])
+    @vite(['resources/css/style.css', 'resources/js/scripts.js', 'resources/js/app.js'])
 </head>
