--- a/resources/views/partials/sidebar.edge
+++ b/resources/views/partials/sidebar.edge
@@ -1,47 +1,40 @@
 <div class="h-screen flex flex-row flex-wrap">
-  
-    <div id="sideBar" class="relative flex flex-col flex-wrap bg-white border-r border-gray-300 p-6 flex-none w-64 md:-ml-64 md:fixed md:top-0 md:z-30 md:h-screen md:shadow-xl animated faster">
-  
-      <div class="flex flex-col">
-        
-        <div class="text-right hidden md:block mb-4">
-          <button id="sideBarHideBtn">
-            <i class="fad fa-times-circle"></i>
-          </button>
-        </div>
-  
-        <p class="uppercase text-xs text-gray-600 mb-4 tracking-wider">homes</p>
-  
-        <a href="./index.html" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-          <i class="fad fa-chart-pie text-xs mr-2"></i>                
-          Dashboard
-        </a>
-  
-        <p class="uppercase text-xs text-gray-600 mb-4 mt-4 tracking-wider">Logs</p>
-  
-        <a href="./email.html" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-          <i class="fad fa-envelope-open-text text-xs mr-2"></i>
-          API
-        </a>
-  
-        <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-          <i class="fad fa-comments text-xs mr-2"></i>
-          API POS
-        </a>
-  
-        <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-          <i class="fad fa-shield-check text-xs mr-2"></i>
-          API Promo
-        </a>
-  
-        <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
-          <i class="fad fa-calendar-edit text-xs mr-2"></i>
-          API Sync Product
-        </a>
-  
+
+  <div id="sideBar" class="relative flex flex-col flex-wrap bg-white border-r border-gray-300 p-6 flex-none w-64 md:-ml-64 md:fixed md:top-0 md:z-30 md:h-screen md:shadow-xl animated faster">
+    
+    <div class="flex flex-col">
+
+      <div class="text-right hidden md:block mb-4">
+        <button id="sideBarHideBtn">
+          <i class="fad fa-times-circle"></i>
+        </button>
       </div>
-  
+
+      <p class="uppercase text-xs text-gray-600 mb-4 tracking-wider">homes</p>
+      <a href="/dashboard" class="mb-3 bg-indigo-700 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
+        <i class="fad fa-chart-pie text-xs mr-2"></i>                
+        dashboard
+      </a>
+
+      <p class="uppercase text-xs text-gray-600 mb-4 mt-4 tracking-wider">Logs</p>
+      <a href="./email.html" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
+        <i class="fad fa-envelope-open-text text-xs mr-2"></i>
+        Api
+      </a>
+      <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
+        <i class="fad fa-comments text-xs mr-2"></i>
+        API POS
+      </a>
+      <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
+        <i class="fad fa-shield-check text-xs mr-2"></i>
+        API Promo
+      </a>
+      <a href="#" class="mb-3 capitalize font-medium text-sm hover:text-teal-600 transition ease-in-out duration-500">
+        <i class="fad fa-calendar-edit text-xs mr-2"></i>
+        Api Sync Product
+      </a>
+      
+
     </div>
-  
+
   </div>
-  
